# UiT_parallel_shitcode

./: CMakeLists.txt  iterative_tsp.c  mat_12e  mat_15e  mp_nbody.c  nbody.c  omp_nbody.c  omp_tsp.c  pthread_nbody.c  pthread_tsp.c  recursive_tsp.c  timer.h
